[gd_scene load_steps=14 format=4 uid="uid://clktf3f0a1h8p"]

[ext_resource type="Texture2D" uid="uid://cxch0i1mgtrgf" path="res://assets/Tiles/Grass_Middle.png" id="1_7n6eb"]
[ext_resource type="Script" uid="uid://dvnv75bqspb1l" path="res://tutorial.gd" id="1_yb1ct"]
[ext_resource type="PackedScene" uid="uid://b6hh4rixs2dfv" path="res://player/player.tscn" id="3_ehuit"]
[ext_resource type="Texture2D" uid="uid://cmr8nlc3uqb1j" path="res://assets/Tiles/Cliff_Tile.png" id="3_hu44a"]
[ext_resource type="Texture2D" uid="uid://c2y7weh11rslu" path="res://assets/Tiles/Path_Tile.png" id="4_0cr88"]
[ext_resource type="PackedScene" uid="uid://b38e16u4df4j2" path="res://trees/base_tree.tscn" id="4_5mrt3"]
[ext_resource type="FontFile" uid="uid://iublapr1rgpr" path="res://assets/Fonts/EightBitDragon-anqx.ttf" id="7_0cr88"]
[ext_resource type="Texture2D" uid="uid://c7bofi0b22c6u" path="res://assets/arrow.png" id="8_4t6hg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yb1ct"]
texture = ExtResource("1_7n6eb")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4t6hg"]
texture = ExtResource("3_hu44a")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7vrqn"]
texture = ExtResource("4_0cr88")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ehuit"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_yb1ct")
sources/1 = SubResource("TileSetAtlasSource_4t6hg")
sources/2 = SubResource("TileSetAtlasSource_7vrqn")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cr88"]
size = Vector2(14.5, 88.5)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_yb1ct")

[node name="TutorialBackground" type="TileMapLayer" parent="."]
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAIAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAQAAAAAAAAABAAAAAQABAAIAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAQABAAAAAAACAAAAAQACAAIAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAQACAAAAAAADAAAAAQAAAAIAAAADAAEAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAQAAAAAAAAAEAAAAAQABAAIAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAQABAAAAAAAFAAAAAQACAAIAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAQACAAAAAAAGAAAAAQAAAAIAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAQAAAAAAAAAHAAAAAQABAAIAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAQABAAAAAAAIAAAAAQACAAIAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAQACAAAAAAAJAAAAAQAAAAIAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAQAAAAAAAAAKAAAAAQABAAIAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAQABAAAAAAALAAAAAQACAAIAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAQACAAAAAAAMAAAAAQAAAAIAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAQAAAAAAAAANAAAAAQABAAIAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAQABAAAAAAAOAAAAAQACAAIAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAQACAAAAAAAPAAAAAQAAAAIAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAQAAAAAAAAAQAAAAAQABAAIAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAQABAAAAAAARAAAAAQACAAIAAAARAAEAAgAAAAAAAAARAAIAAgAAAAEAAAARAAMAAgAAAAEAAAARAAQAAgAAAAEAAAARAAUAAgAAAAEAAAARAAYAAgAAAAIAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAQACAAAAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAEAAAABAP7/AQABAAAAAAABAP//AQABAAEAAAACAP7/AQACAAAAAAACAP//AQACAAEAAAADAP7/AQAAAAAAAAADAP//AQAAAAEAAAAEAP7/AQABAAAAAAAEAP//AQABAAEAAAAFAP7/AQACAAAAAAAFAP//AQACAAEAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAEAAAAHAP7/AQABAAAAAAAHAP//AQABAAEAAAAIAP7/AQACAAAAAAAIAP//AQACAAEAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAEAAAAKAP7/AQABAAAAAAAKAP//AQABAAEAAAALAP7/AQACAAAAAAALAP//AQACAAEAAAAMAP7/AQAAAAAAAAAMAP//AQAAAAEAAAANAP7/AQABAAAAAAANAP//AQABAAEAAAAOAP7/AQACAAAAAAAOAP//AQACAAEAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAEAAAAQAP7/AQABAAAAAAAQAP//AQABAAEAAAARAP7/AQACAAAAAAARAP//AQACAAEAAAD9//7/AQAAAAAAAAD9////AQAAAAEAAAD9/wAAAQAAAAIAAAD+//7/AQABAAAAAAD+////AQABAAEAAAD+/wAAAQABAAIAAAD///7/AQACAAAAAAD/////AQACAAEAAAD//wAAAQACAAIAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAEAAAD9/wMAAQAAAAIAAAD+/wEAAQABAAAAAAD+/wIAAQABAAEAAAD+/wMAAQABAAIAAAD//wEAAQACAAAAAAD//wIAAQACAAEAAAD//wMAAQACAAIAAAD9/wQAAQAAAAAAAAD9/wUAAQAAAAEAAAD9/wYAAQAAAAIAAAD+/wQAAQABAAAAAAD+/wUAAQABAAEAAAD+/wYAAQABAAIAAAD//wQAAQACAAAAAAD//wUAAQACAAEAAAD//wYAAQACAAIAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAEAAAD9/wkAAQAAAAIAAAD+/wcAAQABAAAAAAD+/wgAAQABAAEAAAD+/wkAAQABAAIAAAD//wcAAQACAAAAAAD//wgAAQACAAEAAAD//wkAAQACAAIAAAD9/woAAQAAAAAAAAD9/wsAAQAAAAEAAAD9/wwAAQAAAAIAAAD+/woAAQABAAAAAAD+/wsAAQABAAEAAAD+/wwAAQABAAIAAAD//woAAQACAAAAAAD//wsAAQACAAEAAAD//wwAAQACAAIAAAAAAAsAAQAAAAEAAAAAAAwAAQAAAAIAAAABAAsAAQABAAEAAAABAAwAAQABAAIAAAACAAsAAQACAAEAAAACAAwAAQACAAIAAAADAAsAAQAAAAEAAAADAAwAAQAAAAIAAAAEAAsAAQABAAEAAAAEAAwAAQABAAIAAAAFAAsAAQACAAEAAAAFAAwAAQACAAIAAAAGAAsAAQAAAAEAAAAGAAwAAQAAAAIAAAAHAAsAAQABAAEAAAAHAAwAAQABAAIAAAAIAAsAAQACAAEAAAAIAAwAAQACAAIAAAAJAAsAAQAAAAEAAAAJAAwAAQAAAAIAAAAKAAsAAQABAAEAAAAKAAwAAQABAAIAAAALAAsAAQACAAEAAAALAAwAAQACAAIAAAAMAAsAAQAAAAEAAAAMAAwAAQAAAAIAAAANAAsAAQABAAEAAAANAAwAAQABAAIAAAAOAAsAAQACAAEAAAAOAAwAAQACAAIAAAAPAAsAAQAAAAEAAAAPAAwAAQAAAAIAAAAQAAsAAQABAAEAAAAQAAwAAQABAAIAAAARAAsAAQACAAEAAAARAAwAAQACAAIAAAASAAEAAgABAAAAAAASAAIAAgABAAEAAAASAAMAAgABAAEAAAATAAEAAgABAAAAAAATAAIAAgABAAEAAAATAAMAAgABAAEAAAAUAAEAAgABAAAAAAAUAAIAAgABAAEAAAAUAAMAAgABAAEAAAASAAQAAgABAAEAAAASAAUAAgABAAEAAAASAAYAAgABAAIAAAATAAQAAgABAAEAAAATAAUAAgABAAEAAAATAAYAAgABAAIAAAAUAAQAAgABAAEAAAAUAAUAAgABAAEAAAAUAAYAAgABAAIAAAATAP7/AQABAAAAAAATAP//AQABAAEAAAATAAAAAQABAAIAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAQABAAAAAAATAAsAAQABAAEAAAATAAwAAQABAAIAAAAUAP7/AQACAAAAAAAUAP//AQACAAEAAAAUAAAAAQACAAIAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAQACAAAAAAAUAAsAAQACAAEAAAAUAAwAAQACAAIAAAAVAP7/AQAAAAAAAAAVAP//AQAAAAEAAAAVAAAAAQAAAAIAAAAVAAEAAgABAAAAAAAVAAIAAgABAAEAAAAVAAMAAgABAAEAAAAVAAQAAgABAAEAAAAVAAUAAgABAAEAAAAVAAYAAgABAAIAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAEAAAAVAAwAAQAAAAIAAAAWAP7/AQABAAAAAAAWAP//AQABAAEAAAAWAAAAAQABAAIAAAAWAAEAAgABAAAAAAAWAAIAAgABAAEAAAAWAAMAAgABAAEAAAAWAAQAAgABAAEAAAAWAAUAAgABAAEAAAAWAAYAAgABAAIAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAQABAAAAAAAWAAsAAQABAAEAAAAWAAwAAQABAAIAAAAXAAEAAQAAAAAAAAAXAAIAAQAAAAEAAAAXAAMAAQAAAAIAAAAXAAQAAQAAAAAAAAAXAAUAAQAAAAEAAAAXAAYAAQAAAAIAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAEAAAASAAAAAQAAAAIAAAAXAP7/AQACAAAAAAAXAP//AQACAAEAAAAXAAAAAQACAAIAAAASAAoAAQAAAAAAAAASAAsAAQAAAAEAAAASAAwAAQAAAAIAAAAXAAoAAQACAAAAAAAXAAsAAQACAAEAAAAXAAwAAQACAAIAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAEAAAAXAAkAAQAAAAIAAAAYAAcAAQABAAAAAAAYAAgAAQABAAEAAAAYAAkAAQABAAIAAAAZAAcAAQACAAAAAAAZAAgAAQACAAEAAAAZAAkAAQACAAIAAAA=")
tile_set = SubResource("TileSet_ehuit")

[node name="Label" type="Label" parent="."]
offset_left = 23.0
offset_top = 133.0
offset_right = 360.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("7_0cr88")
theme_override_font_sizes/font_size = 10
text = "Destruye los arboles malditos presionando Talar"
horizontal_alignment = 1

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(324, 60)
scale = Vector2(0.169289, 0.107157)
texture = ExtResource("8_4t6hg")

[node name="Player" parent="." instance=ExtResource("3_ehuit")]
position = Vector2(68.3304, 65.3285)

[node name="BaseTree" parent="." instance=ExtResource("4_5mrt3")]
position = Vector2(187, 47)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(169, 89)
zoom = Vector2(0.7, 0.7)

[node name="LevelArea" type="Area2D" parent="."]
position = Vector2(10, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
position = Vector2(383, 62.25)
shape = SubResource("RectangleShape2D_0cr88")

[connection signal="body_entered" from="LevelArea" to="." method="_on_level_area_body_entered"]
